argopush/flask.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: 421576594835.dkr.ecr.ap-northeast-2.amazonaws.com/docker-spring:python_image
        ports:
        - containerPort: 5000
        imagePullPolicy: Always
      imagePullSecrets:
      - name: regcred
