argopush/spring.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-deployment
spec:
  selector:
    matchLabels:
      app: spring-boot
  replicas: 3 
  template:
    metadata:
      labels:
        app: spring-boot
    spec:
      containers:
      - name: spring
        image: 421576594835.dkr.ecr.ap-northeast-2.amazonaws.com/docker-spring:spring_image
        ports:
        - containerPort: 80
