argopush/SQLCNAME.yaml
kind: Service
apiVersion: v1
metadata:
  name: mysql
spec:
  type: ExternalName
  externalName: 421576594835.dkr.ecr.ap-northeast-2.amazonaws.com/docker-spring:spring_image
