argopush/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    run: flask
