argopush/mapping.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  port: 
  - name: mysql
    protocol: TCP
    targetPoint: 3306
    nodePort: 0
    
---

apiVersion: v1
kind: Endpoints
metadata:
  name: mysql 
subsets: 
  addresses:
  - ip: 1.1.1.1
  ports:
  - port: 3306
    name: mysql
