argopush/rds.yaml
apiVersion: v1
kind: Service
metadata: 
  name: mysqlrds
spec:
  type: ExternalName 
  externalName: 10.0.32.192
