argopush/rdsdb.yaml
apiVersion: v1
kind: Service
metadata: 
  name: rdsendpoint
spec:
  type: ExternalName 
  externalName: database-1.cpjbyuaaolfs.ap-northeast-2.rds.amazonaws.com
