argopush/rdsendpoint.yaml
kind: Service
apiVersion: v1
metadata:
  name: rdsendpoint
Spec:
  type: ClusterIP
  ports:
  - port: 3306
  targetPort: 3306
