argopush/spring-sql.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-service-sql
spec:
  selector: 
    app: spirng
  ports:
    - port: 3306
      targetPort: 3306
