argopush/sqlservice.yaml
kind: Service
apiVersion: v1
metadata:
 name: mysqlrds
Spec:
 type: ClusterIP
 ports:
 - port: 3306
   targetPort: 3306
