argopush/test.yaml
apiVersion: v1
kind: Service
metadata: 
  name: google
spec:
  type: ExternalName 
  externalName: google.com
