argopush/ingress-service.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /gongo
#     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
#     nginx.ingress.kubernetes.io/ssl-passthrough: "true"


spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - test.gazami.click
    secretName: nginx  
  rules:
  - host: test.gazami.click
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: spring-service
            port:
              number: 8080
