argopush/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingressclass.kubernetes.io/is-default-class: true

spec:
  rules:
  - http: test.gazami.click
      paths:
      - path: /gongo
        pathType: Prefix
        backend:
          service:
            name: spring-service
            port:
              number: 8080
