argopush/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-monitoring
  namespace: monitoring
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-gateway
  hostnames: "*"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /gongo
    backendRefs:
    - name: spring-service
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /gongo
    backendRefs:
    - name: flask-service
      port: 5000
